Chatbot Attractions and Alerts
Added two more routes
/bot/attractions - takes a string start and end location and provides a list of 10 tourist attractions between those locations (provided by chatbot)
/emailAlert - takes message and sends the user an email with the message

Updated openapi YAML
